--- a/locales/pos_messages.properties
+++ b/locales/pos_messages.properties
@@ -893,7 +893,7 @@ tiptext.gotocustomers=Go to Customers
 tiptext.findcustomers=Find Customers
 tiptext.splitsale=Split Sale
 tiptext.reprintlastticket=Reprint Last Ticket
-tiptext.productsearch=Product Search
+tiptext.productsearch=Produkt Informationen
 tiptext.editline=Edit Line
 tiptext.chooseattributes=Choose Attributes
 tiptext.scale=Scale
@@ -1005,7 +1005,8 @@ label.defaultkitchenptr=Printer number
 
 label.selectsite=Store
 label.store=Store
-Button.Check=Check Stock
+Button.Check=Check
+Button.CheckProd=Check Product
 label.showinstockonly=Only items in stock
 label.csvallowdiscount=Allow discount on items
 label.importprofile=Import Profile
