--- a/locales/pos_messages_de.properties
+++ b/locales/pos_messages_de.properties
@@ -25,6 +25,7 @@ button.catalogdel=Aus dem Katalog herausnehmen
 Button.Close=Schlie\u00dfen
 Button.CloseCash=Kassenabschluss
 Button.BookCash=Buchen
+Button.CheckProd=Pr\u00fcfe Produkt
 Button.DeleteTicket=L\u00f6schen
 button.edit=Bearbeiten
 Button.ExecuteChart=Grafik ausf\u00fchren
@@ -91,6 +92,7 @@ label.dutyid=ID
 label.dutyname=Steuer Name
 label.dutyrate=Steuersatz
 label.editline=Zeile bearbeiten
+label.editstored=bearbeite Fach 2
 Label.EndDate=Enddatum
 label.floorid=Raum ID
 label.floorname=Raum Name
